Fixed equations to follow new standard for numbering

--- a/c/index.html
+++ b/c/index.html
@@ -52,44 +52,42 @@
 <p>In this section, each name will followed by a reference to the equation (or the section) that explains the formula. There are no units included for the sake of memorization but you should always keep the unit in the back of your head, or better yet, remember the conversion factor procedure.</p>
 
 <p><b>Number of moles</b> when given mass and molar mass (<a href="#eq-c-mol"></a>):
-\begin{equation} n = \frac{m}{M} \end{equation}</p>
+<eq> n = \frac{m}{M} </eq></p>
 
 <p><b>Number of moles of a gas in standard condition</b> (<a href="#eq-c-mol-in-gas"></a>):
-\begin{equation} n = \frac{V}{22.4} \end{equation}</p>
+<eq> n = \frac{V}{22.4} </eq></p>
 
 <p><b>Percentage composition</b> (<a href="#eq-c-percentage-composition"></a>):
-\begin{equation}
+<eq>
     A\% = \frac{m_A}{m_{AB}}\times100\%
-\end{equation}</p>
+</eq></p>
 
 <h2>Stoichiometry</h2>
 <p>Stoichiometry simply means that we are dealing with chemical reactions and the quantitative data from such reactions (like weight, volume, number of atoms, etc...).</p>
 
 <h3 id="sec-c-mole">The mole — the central number of chemistry</h3>
 <p>How many items are there in a triplet? $3$. How much is a dozen? $12$. Now we have a new definition:
-\begin{equation}
+<eq>
     \text{A mole} = 6.02\times10^{23}
-\end{equation}
+</eq>
 Similar to how half a dozen is $0.5\times12=6$, you can tell other scientists that you have a certain number of moles of <i>something</i>. Note that a mole is still a quantity and not a unit — you have a mole of something. As a conversion factor, a mole is:
-\begin{equation}
+<eq>
     \frac{1\text{mol of item}}{6.02\times10^{23}\text{ items}}
-\end{equation}</p>
+</eq></p>
 
 <p>A mole of atoms of an element acts as the central unit to convert between different units or elements in a reaction.</p>
 
 <p><b>Molar mass</b> is the mass of $1$ mole of an element while the <b>formula mass</b> of a compound is the sum of all atoms in that compound. They are both similar in value but different in the unit: molar mass's unit is usually in grams per mole while formula mass is in the atomic unit, which is $1/12$ the weight of a carbon atom (or about $1$ hydrogen atom). The atomic unit will be abbreviated as "u" throughout this note.</p>
 
 <p><b>To calculate the number of moles</b>, you can see how many times the molar mass you have of the element A:
-<span class="label" id="eq-c-mol"></span>
-\begin{equation}
+<eq id="eq-c-mol">
     n = \frac{m\text{ g}}{M\text{ g/mol}}
-\end{equation}</p>
+</eq></p>
 
 <p>$1$ mole of any gas at <b>standard temperature and pressure</b> or <b>STP</b> occupies exactly $22.4$ litres. That property only appears for gasses but not liquids or solids. If you want to calculate <b>the number of moles in a volume of gas</b>:
-<span class="label" id="eq-c-mol-in-gas"></span>
-\begin{equation}
+<eq id="eq-c-mol-in-gas">
     n = V\text{ L} \times \frac{1\text{mol}}{22.4\text{L}}
-\end{equation}</p>
+</eq></p>
 
 <p><b>Molarity</b> is the number of moles of the chemical per litre of a solution. It indicates how many moles of the chemical are presented in a litre of a solution — similar to density but in this case, it is the number of atoms over 1 litre of the solutions. Because a solution will include both the chemical and the water, the actual amount of water present in the solution is not $1$ litre — you add water <i>up to</i> $1$L, NOT $1$L <i>of water</i>.</p>
 
@@ -116,10 +114,9 @@ In this stage, we calculate the weight of individual items that make up our comp
 Despite you need two atoms of hydrogen to build a single molecule, clearly that single hydrogen atom takes up more weight.</p>
 
 <p>The general formula to calculate the <b>percentage composition</b> with the mass of an element $m_A$ and the compound's mass $m_{AB}=m_A+m_B$ is:
-<span class="label" id="eq-c-percentage-composition"></span>
-\begin{equation}
+<eq id="eq-c-percentage-composition">
     \%A = \frac{m_A}{m_{AB}}\times100\%
-\end{equation}</p>
+</eq></p>
 
 <p>To calculate an <b>empirical formula</b>, we start by pretending we have $100$g of the substance: $11$g of that substance would be hydrogen and $89$g would be oxygen. We now divide each of those numbers by the molar mass to obtain the number of moles in that mass:
 \[
@@ -136,11 +133,11 @@ Then divide them by the smallest factor (in this case $5.5625$) to get the ratio
 Because of the estimations in our equation, it is appropriate to assume that it is 2 moles of hydrogen for every oxygen atom or H₂0.</p>
 
 <p>If you were to simplify the process of calculating <b>empirical formula</b> into an equation, define the formula A<sub>x</sub>B<sub>y</sub> and $n_A$ is the molar mass of A, we have the ratio:
-\begin{equation}
+<eq>
     x:y
     = \frac{\%A}{n_A} : \frac{\%B}{n_B}
     = m_A : m_B
-\end{equation}</p>
+</eq></p>
 
 <h3>Chemical equations</h3>
 <p>A chemical equation usually indicates the proportion of the chemicals that participate in a reaction, essentially showing the mole of particles you need.</p>
@@ -159,34 +156,34 @@ Because of the estimations in our equation, it is appropriate to assume that it 
 <p>There are three unique quantum numbers to describe an atomic orbital; this can be extended to describe an electron using the orbital it is in and its spin (the fourth quantum number). <b>The Pauli exclusion principle</b> says that each orbital only has 2 electrons with a different spin, which means that the four quantum numbers are essentially the ID of an electron.</p>
 
 <p><b>The principal quantum number ($n$)</b> indicates the relative size of the atomic orbital. This is relative to the "shell" of the electron in the classic atom model, so as the number of shells increases, there will be more electrons which leads to more atomic orbital. <i>Most of the time</i>, a higher $n$ means that the orbital has higher energy and the electron will spend more time farther from the nucleus.
-\begin{equation}
+<eq>
     n\in\mathbb{N}\setminus\{0\}
     \qquad 0 \leq n
-\end{equation}</p>
+</eq></p>
 
 <p><b>The azimuthal quantum number<note>Also known as the angular momentum quantum number.</note> ($l$)</b> is the second quantum number, indicating the shape of the atomic orbital. This usually goes by the name of "subshell", making one shell $n$ can have multiple subshells $l$. As the shell number increases, so does the number of subshells it has; for example: the shell $n=2$ will have two subshells: s and p. The s orbital (2s) is larger than the s orbital in the first shell (1s).
-\begin{equation}
+<eq>
     l\in\mathbb{Z}
     \qquad  0 \leq l \leq n-1
-\end{equation}
+</eq>
 As far as this chapter is concerned, you will mostly refer to this number using letters instead. Starting from $l=0$ and going up, we will refer to the subshell as s, p, d, f, g, h, and i; the letters after the g sub-shell follow in alphabetical order—excepting letter j and those already used. At the introductory level, the subshell f will likely be the highest $l$ you will ever see.</p>
 
 <p><b>The magnetic quantum number ($m_i$)</b> tells us the orientation in space of a given atomic orbital. This number is <i>fortunately</i> unimportant for our electron configuration topic, but keep in mind that an orbital shape can have multiple different orientations, usually based on the three 3D axes: $x$, $y$, and $z$.
-\begin{equation}
+<eq>
     m_l\in\mathbb{Z}
     \qquad -l \leq m_l \leq +l
-\end{equation}
+</eq>
 As you can see from the formula, the number of possible $m_l$ (hence the number of electrons) grows pretty quickly.</p>
 
 <p>Those there quantum numbers are enough to indicate which orbit you are talking about. It is suitable to remember that there are many possible orientations of an atomic orbital and many orbits with relatively the same size; similarly, <i>in classical words</i>, there are many orbitals in a subshell and many subshells in a shell. At this introductory level, many terminologies from the classical model are often used interchangeably with the vocabularies from the quantum mechanics model, so do not worry about using the correct word... <i>yet</i>.</p>
 
 <p><b>The spin quantum number ($m_s$)</b> as the fourth quantum number indicates the quantum spin of a particle or in this case, an electron. Because an atomic orbit can have two electrons with a different spin, this number is necessary to indicate which electron you are referring to.
-\begin{equation}
+<eq>
     m_s\in\left\{
         +\frac{1}{2},
         -\frac{1}{2}
     \right\}
-\end{equation}</p>
+</eq></p>
 
 <h3>Orbital diagram</h3>
 <p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should have a different spin.
@@ -207,7 +204,7 @@ In simple terms demonstrated by <a href="#fig-c2"></a>, you should fill all the 
 </figure></p>
 
 <p>The number of orbitals per subshell is based on the third quantum number mentioned above: it is the number of possible values for $m_i$. The general formula for the number of atomic orbitals based on the second quantum number $l$ is:
-\begin{equation} 1 + 2(l-1) \end{equation}
+<eq> 1 + 2(l-1) </eq>
 Multiply the result by 2 and you get the number of electrons a subshell can hold.</p>
 
 <p>Another thing you need to keep in mind is the <b>Aufbau principle</b> ("Aufbau" in Germany translates to "build up", which suits its purpose of building electron configuration from the ground state up):
@@ -238,9 +235,9 @@ And just like any principle in chemistry, there are exceptions to the Aufbau pri
 
 <h3>Electron configuration</h3>
 <p>Taking from <a href="#fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
-\begin{equation}
+<eq>
     n\,l\,^x
-\end{equation}
+</eq>
 This makes the electron configuration for Li which has 3 electrons as:
 \begin{equation*}
     1s^2\;2s^1
