Adjusted equation reference

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ function subjectLoad() {
         }
         allAs.forEach(a => {
             if (a.getAttribute('href') === `#${id}`)
-                a.innerText = `(${chapter}.${count})`;
+                a.innerText = `Equation ${chapter}.${count}`;
         });
     });
 
