--- a/index.html
+++ b/index.html
@@ -5,191 +5,7 @@
     <title>Luke's n-week-project</title>
     <link rel="shortcut icon" href="letterhead.svg" type="image/x-icon">
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: "Inter", Helvetica, Arial, sans-serif;
-        }
-
-        header {
-            text-align: center;
-        }
-        header div {
-            display: flex;
-            align-items: center;
-        }
-        header img {
-            margin-left: 0;
-            max-height: 10rem;
-        }
-        header p {
-            text-indent: 0;
-            text-align: center;
-        }
-        header p.med {
-            font-size: 2rem;
-            margin: 0;
-        }
-        header p.large {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 70%;
-            width: 100%;
-            font-size: 3rem;
-        }
-
-        main {
-            margin: auto;
-            max-width: 800px;
-            font-size: large;
-            counter-reset: part chapter section subsection;
-        }
-
-        h1 {
-            break-before: page;
-            text-align: center;
-        }
-        h1:not([noNumber])::before {
-            display: block;
-            font-weight: normal;
-            border-bottom: 1px solid black;
-            counter-increment: part;
-            content: "Part " counter(part, upper-roman);
-        }
-
-        h2 {
-            break-before: page;
-        }
-        h2:not([noNumber])::before {
-            display: block;
-            font-weight: normal;
-            border-bottom: 1px dotted black;
-            counter-increment: chapter;
-            content: "Chapter " counter(chapter) " ";
-            counter-set: section 0;
-        }
-
-        h3::before {
-            display: inline-block;
-            width: 4rem;
-            counter-increment: section;
-            content: counter(chapter) "." counter(section) " ";
-            counter-set: subsection 0;
-        }
-
-        h4::before {
-            display: inline-block;
-            width: 4rem;
-            counter-increment: subsection;
-            content: counter(chapter) "." counter(section) "." counter(subsection) " ";
-        }
-
-        mjx-assistive-mml {
-            /* https://github.com/mathjax/MathJax/issues/3348 */
-            text-indent: 0 ! important;
-            bottom: 0;
-            right: 0;
-        }
-
-        /* Content styling */
-        p {
-            text-indent: 2rem;
-            text-align: justify;
-        }
-        .error {
-            background-color: red;
-            color: white;
-        }
-
-        /* figure */
-        figure {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-        .figure {
-            display: flex;
-            justify-content: space-around;
-        }
-        .figure figure {
-            width: 50%;
-        }
-        figure img {
-            max-height: 50vh;
-            max-width: 100%;
-        }
-        figcaption {
-            flex-basis: 100%;
-            text-align: center;
-            margin-top: 1rem;
-            font-style: italic;
-        }
-
-        /* tables */
-        table {
-            margin: auto;
-            min-width: 20rem;
-            border-collapse: collapse;
-            font-size: inherit;
-        }
-        table caption {
-            margin-top: 1rem;
-            caption-side: bottom;
-            font-style: italic;
-        }
-        th {
-            background-color: black;
-            color: white;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 0.5rem;
-            text-align: center;
-        }
-
-        /* labels */
-        eq {
-            position: relative;
-            display: block;
-        }
-        eq > span {
-            position: absolute; /* Position the span relative to the eq container */
-            right: 0; /* Align to the right */
-            top: 50%; /* Move to the vertical center */
-            transform: translateY(-50%); /* Adjust to center the text vertically */
-        }
-
-        /* Footnotes */
-        note {
-            vertical-align: super;
-            border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-            font-size: 0.75em;
-            cursor: pointer;
-        }
-        note span {
-            display: none;
-            background-color: black;
-            color: #fff;
-            padding: 5px;
-            font-size: 1rem;
-        }
-
-        note:hover span {
-            display: block;
-        }
-
-        @media print {
-            main {
-                max-width: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -232,136 +48,5 @@
         <p>Read this for your enjoyment and get a break from the academic-filled parts above — enjoy a moment when practicality starts to spank the author.</p>
     </main>
 </body>
-<script>
-window.MathJax = {
-    // loader: {
-    //     load: ['ui/lazy']
-    // },
-    tex: {
-        // tags: 'ams',
-        inlineMath: [['$', '$']],
-    }
-};
-
-let subjects = document.querySelectorAll('div[subject]'), subjectLoaded = 0;
-
-subjects.forEach(async (subject) => {
-    let response = await fetch(`./${subject.getAttribute('subject')}/index.html`);
-    response = await response.text();
-    subject.innerHTML = response;
-
-    // check images here so it can have subject
-    subject.querySelectorAll('img').forEach(img => {
-        let src = img.getAttribute('src');
-        img.src = subject.getAttribute('subject') + '/' + src;
-        src = src.split('.')[0];
-        img.parentElement.id = `fig-${subject.getAttribute('subject')}${src}`;
-    });
-    subject.querySelectorAll('note').forEach((note, id) => {
-        note.innerHTML = `[${id}]<span>${note.innerHTML}</span>`;
-    })
-
-    subjectLoad();
-})
-
-function subjectLoad() {
-    subjectLoaded++
-    if (subjectLoaded < subjects.length) return;
-
-    // check links here to cross-reference between subjects
-    console.log('Checking links');
-    document.querySelectorAll('a').forEach(a => {
-        let ref = a.getAttribute('href');
-        if (!ref.startsWith('#')) return;
-        if (!document.getElementById(ref.slice(1))) {
-            a.parentElement.classList.add('error');
-            a.parentElement.title = 'This paragraph contains broken link';
-            console.log(a)
-            return;
-        }
-    });
-
-    console.log('Assign numbering - figures');
-    let chapter = 0, count = 0,
-        allAs = document.querySelectorAll('a');
-    document.querySelectorAll('figure, h2:not([noNumber])').forEach(e => {
-        if (e.tagName === 'H2') { chapter++; count = 0; return; }
-        count++;
-        let ref = `Figure ${chapter}.${count}`,
-            caption = e.querySelector('figcaption');
-        caption.innerText = `${ref}: ${caption.innerText}`;
-        allAs.forEach(a => {
-            if (a.getAttribute('href') === `#${e.id}`)
-                a.innerText = ref;
-        });
-    });
-
-    console.log('Assign numbering - tables');
-    chapter = 0, count = 0;
-    document.querySelectorAll('table, h2:not([noNumber])').forEach(e => {
-        if (e.tagName === 'H2') { chapter++; count = 0; return; }
-        count++;
-        let ref = `Table ${chapter}.${count}`,
-            caption = e.querySelector('caption');
-        caption.innerText = `${ref}: ${caption.innerText}`;
-        allAs.forEach(a => {
-            if (a.getAttribute('href') === `#${e.id}`)
-                a.innerText = ref;
-        });
-    });
-
-    console.log('Assign numbering - equations');
-    chapter = 0, count = 0;
-    document.querySelectorAll('eq, h2:not([noNumber])').forEach(e => {
-        if (e.tagName === 'H2') { chapter++; count = 0; return; }
-        count++;
-        // Create equation number
-        e.innerHTML = `
-            \\begin{equation*}\\begin{aligned} ${e.innerHTML} \\end{aligned}\\end{equation*}
-            <span>(${chapter}.${count})</span>`;
-
-        let id = e.id;
-        if (id === '') return;
-        if (e.parentElement.tagName == 'P') {
-            // move ID so user can see the introduction paragraph of the eq
-            e.id = '';
-            e.parentElement.id = id;
-        }
-        allAs.forEach(a => {
-            if (a.getAttribute('href') === `#${id}`)
-                a.innerText = `Equation ${chapter}.${count}`;
-        });
-    });
-
-    console.log('Assign numbering - sections')
-    document.querySelectorAll('h2:not([noNumber])').forEach(e => {
-        allAs.forEach(a => {
-            if (a.getAttribute('href') === `#${e.id}`) {
-                a.innerText = `Section "${e.innerText}"`;
-            }
-        });
-    });
-
-    var script = document.createElement('script');
-    script.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
-    script.async = true;
-    document.head.appendChild(script);
-}
-
-window.onload = () => {
-    // create a time out to scroll to the hash after the page is loaded
-    setTimeout(
-        () => {
-            try {
-                document.getElementById(window.location.hash.slice(1))
-                .scrollIntoView()
-            } catch (err) {
-                console.info('No hash to scroll')
-            }
-        }
-        , 1000
-    );
-}
-
-</script>
+<script src="script.js"></script>
 </html>
