--- a/a/index.html
+++ b/a/index.html
@@ -866,7 +866,7 @@ If you continue to expand the power rule, we will have an integral for <b>linear
 
 </ul>
 <figure>
-    <img id="abc" src="18.png" alt="Solving integrals flowchart, courtesy of a deleted Reddit user on r/math">
+    <img src="18.png" alt="Solving integrals flowchart, courtesy of a deleted Reddit user on r/math">
     <figcaption>Solving integrals flowchart, courtesy of a deleted Reddit user on r/math</figcaption>
 </figure>
 </p>
