Fix error in equation

--- a/a/index.html
+++ b/a/index.html
@@ -62,8 +62,9 @@ This leads us to the definition of <b>continuity</b>: if the limit of $f(x)$ at 
 
 <p>As you can see, both the upper limit and the lower limit still attempt to reach closer to one single value, so the limit still exists. Consider $f(x)=1/x$ in <a href="#fig-a4"></a>, we have the following:
 \[
-    \lim_{x\to0}\frac{1}{x} <b> does not exist, but</b>
+    \lim_{x\to0}\frac{1}{x}
 \]
+does not exist, but
 \[
     \lim_{x\to0^-}\frac{1}{x} = -\infty
     \qquad
