--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
         <p>Read this for your enjoyment and get a break from the academic-filled parts above — enjoy a moment when practicality starts to spank the author.</p>
     </main>
+    <footer>
+        <h2 noNumber>Footnotes</h2>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
