Add styling for *sidenotes* Replace footnote

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <p>The Note of Science Topics by Luke NK is free and unlicensed. The author simply suggests the astute reader share this with anybody who needs a different perspective to look at the topics. Knowledge is best used when everybody knows it.</p>
 
-        <aside>
+        <nav>
             <h2 noNumber>Chapters</h2>
             <!--
                 Call it chapters for now because there is no page number yet
                 Also there is no link to the chapters yet
             -->
-        </aside>
+        </nav>
 
         <h1>Math</h1>
         <div subject="m"></div>
@@ -55,9 +55,6 @@
 
         <p>Read this for your enjoyment and get a break from the academic-filled parts above — enjoy a moment when practicality starts to spank the author.</p>
     </main>
-    <footer>
-        <h2 noNumber>Footnotes</h2>
-    </footer>
 </body>
 <script src="script.js"></script>
 </html>
