Adjust styling of the header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
                 LukeNK
             </p>
         </div>
-        <p class="large">The Note of Science Topics</p>
-        <p>N-week project</p>
+        <p class="large">THE NOTE OF SCIENCE&nbsp;TOPICS</p>
+        <p>
+            N-week project<br>
+            Publication <time></time>
+        </p>
     </header>
     <main>
         <h2 noNumber>About This Note</h2>
