Remove unused  code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </p>
         </div>
         <p class="large">THE NOTE OF SCIENCE&nbsp;TOPICS</p>
-        <object data="header.png" type="image/png" class="header">
+        <object data="header.png" type="image/png">
             <img src="header.jpg">
         </object>
         <p>
