Fix displaced sidenote

--- a/c/index.html
+++ b/c/index.html
@@ -161,7 +161,7 @@ Because of the estimations in our equation, it is appropriate to assume that it 
     \qquad 0 \leq n
 </eq></p>
 
-<p><b>The azimuthal quantum number<note>Also known as the angular momentum quantum number.</note> ($l$)</b> is the second quantum number, indicating the shape of the atomic orbital. This usually goes by the name of "subshell", making one shell $n$ can have multiple subshells $l$. As the shell number increases, so does the number of subshells it has; for example: the shell $n=2$ will have two subshells: s and p. The s orbital (2s) is larger than the s orbital in the first shell (1s).
+<p><b>The azimuthal quantum number ($l$)</b><note>Also known as the angular momentum quantum number.</note>  is the second quantum number, indicating the shape of the atomic orbital. This usually goes by the name of "subshell", making one shell $n$ can have multiple subshells $l$. As the shell number increases, so does the number of subshells it has; for example: the shell $n=2$ will have two subshells: s and p. The s orbital (2s) is larger than the s orbital in the first shell (1s).
 <eq>
     l\in\mathbb{Z}
     \qquad  0 \leq l \leq n-1
