Calculus section added explaination

--- a/a/index.html
+++ b/a/index.html
@@ -418,7 +418,7 @@ If you were to manipulate the original equation as a composite function the deri
     (fg)' = fg'+f'g
 </eq></p>
 
-<p>The <b>quotient rule</b> was found by expanding the derivative's limit definition. Unfortunately, this rule does not have any possible visualization so you might have to rote learn this:
+<p>The <b>quotient rule</b> was found by expanding the derivative's limit definition. The numerator is almost similar to the product rule, except with a minus; if you imagine we are multiplying $\frac{f}{1}\frac{1}{g}$, then the $g^2$ is almost like trying to use the reciprocal to cancel out the denominator. I know this explanation is not accurate, but it is a good way to visualize the rule during tests.
 <eq>
     \left( \frac{f}{g} \right)'
     = \frac{f'g-fg'}{g^2}
