Fix wrong notation

--- a/a/index.html
+++ b/a/index.html
@@ -690,7 +690,7 @@ You can take a look at <a href="#fig-a15"></a> for a visualization of the rule.
 \]
 We can use $u$ as an input placeholder and compute our integral as:
 <eq>
-    \int f(g(x) \cdot g'(x)) \;dx
+    \int f(g(x)) \cdot g'(x) \;dx
     = \int f(u) \;du
 </eq>
 After that, solve the integral normally (remember the variable is now a placeholder $u$) before substituting $g(x)$ back into the equation. Use <a href="#fig-a17"></a> to assist you when setting up the equation.
